[package]
name = "graphic_loops"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[example]]
name = "pyramid"
path = "src/pyramid.rs"

[[example]]
name = "floyd"
path = "src/floyd_triangle.rs"
